--- a/IPLwebsite/download.html
+++ b/IPLwebsite/download.html
@@ -248,7 +248,7 @@
     <script type="text/javascript">
         $(document).ready(function(){
 
-            var href="http://localhost/IPL%20Website/apk/indianPUBGleague_1.0.apk";
+            var href="https://hardikbamania.github.io/IPLwebsite/apk/indianPUBGleague_1.0.apk";
             window.location.href = href;
         });
     </script>
