--- a/IPLwebsite/download.html
+++ b/IPLwebsite/download.html
@@ -163,13 +163,13 @@
                         </div>
             
                       <div class="col-md-4 col-lg-2 margin-top mt-20">
-                              <img class="img-fluid" src="images/screenshot-1.png" width="200" alt="">
+                              <img class="img-fluid" src="images/download_app.jpg width="200" alt="">
                         </div>
                         <div class="col-md-4 col-lg-2 margin-top mt-20">
-                            <img class="img-fluid" src="images/screenshot-2.png" width="200" alt="">
+                            <img class="img-fluid" src="images/open_app.jpg" width="200" alt="">
                         </div>  
                         <div class="col-md-4 col-lg-2 margin-top mt-20">
-                            <img class="img-fluid" src="images/screenshot-3.png" width="200" alt="">
+                            <img class="img-fluid" src="images/install_app.jpg" width="200" alt="">
                         </div>
                         <div class="mt-20">
                             <p class="lead head-small">
