--- a/IPLwebsite/download.html
+++ b/IPLwebsite/download.html
@@ -163,15 +163,15 @@
                         </div>
             
                       <div class="col-md-4 col-lg-2 margin-top mt-20">
-                        <h3>Download</h3>
+                        <h3 class="text-white">Download</h3>
                         <img class="img-fluid" src="images/download_app.jpg" width=200" alt="">
                         </div>
                         <div class="col-md-4 col-lg-2 margin-top mt-20">
-                            <h3>Open</h3>
+                            <h3 class="text-white">Open</h3>
                             <img class="img-fluid" src="images/open_app.jpg" width="200" alt="">
                         </div>  
                         <div class="col-md-4 col-lg-2 margin-top mt-20">
-                            <h3>Install</h3>
+                            <h3 class="text-white">Install</h3>
                             <img class="img-fluid" src="images/install_app.jpg" width="200" alt="">
                         </div>
                         <div class="mt-20">
