--- a/IPLwebsite/download.html
+++ b/IPLwebsite/download.html
@@ -145,7 +145,7 @@
 
 
     <!-- Header -->
-    <header id="header" class="header">
+    <header id="header" class="header2 ">
         <div class="header-content">
 
             <div class="jumbotron jumbotron-fluid pubg" style="background:none; ">
