--- a/IPLwebsite/download.html
+++ b/IPLwebsite/download.html
@@ -194,13 +194,13 @@
     </header> <!-- end of header -->
     <!-- end of header -->
 
-    <!-- Footer -->
-    <div class="footer" >
+      <!-- Footer -->
+      <div class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <span class="fa-stack fa-lg">
-                        <a href="#your-link">
+                        <a href="https://www.facebook.com/LegendsOfPUBGM/">
                             <i class="fas fa-circle fa-stack-2x facebook"></i>
                             <i class="fab fa-facebook-f fa-stack-1x"></i>
                         </a>
@@ -212,14 +212,14 @@
                         </a>
                     </span>
                     <span class="fa-stack fa-lg">
-                        <a href="#your-link">
+                        <a href="https://www.youtube.com/channel/UCbpV3tam6MOkryWKqcLu2uw">
                             <i class="fas fa-circle fa-stack-2x youtube"></i>
                             <i class="fab fa-youtube fa-stack-1x"></i>
                         </a>
                     </span>
 
                     <span class="fa-stack fa-lg">
-                        <a href="#your-link">
+                        <a href="https://www.instagram.com/legends.of.pubg/">
                             <i class="fas fa-circle fa-stack-2x instagram"></i>
                             <i class="fab fa-instagram fa-stack-1x"></i>
                         </a>
@@ -229,7 +229,6 @@
         </div> <!-- end of container -->
     </div> <!-- end of footer -->
     <!-- end of footer -->
-
 
     <!-- Copyright -->
     <div class="copyright">
