--- a/IPLwebsite/fair-play-policy.html
+++ b/IPLwebsite/fair-play-policy.html
@@ -183,14 +183,13 @@
     </div> <!-- end of ex-basic-2 -->
     <!-- end of privacy content -->
 
-    
-    <!-- Footer -->
-    <div class="footer">
+      <!-- Footer -->
+      <div class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <span class="fa-stack fa-lg">
-                        <a href="#your-link">
+                        <a href="https://www.facebook.com/LegendsOfPUBGM/">
                             <i class="fas fa-circle fa-stack-2x facebook"></i>
                             <i class="fab fa-facebook-f fa-stack-1x"></i>
                         </a>
@@ -202,27 +201,16 @@
                         </a>
                     </span>
                     <span class="fa-stack fa-lg">
-                        <a href="#your-link">
-                            <i class="fas fa-circle fa-stack-2x google-plus"></i>
-                            <i class="fab fa-google-plus-g fa-stack-1x"></i>
+                        <a href="https://www.youtube.com/channel/UCbpV3tam6MOkryWKqcLu2uw">
+                            <i class="fas fa-circle fa-stack-2x youtube"></i>
+                            <i class="fab fa-youtube fa-stack-1x"></i>
                         </a>
                     </span>
+
                     <span class="fa-stack fa-lg">
-                        <a href="#your-link">
+                        <a href="https://www.instagram.com/legends.of.pubg/">
                             <i class="fas fa-circle fa-stack-2x instagram"></i>
                             <i class="fab fa-instagram fa-stack-1x"></i>
-                        </a>
-                    </span>
-                    <span class="fa-stack fa-lg">
-                        <a href="#your-link">
-                            <i class="fas fa-circle fa-stack-2x linkedin"></i>
-                            <i class="fab fa-linkedin-in fa-stack-1x"></i>
-                        </a>
-                    </span>
-                    <span class="fa-stack fa-lg">
-                        <a href="#your-link">
-                            <i class="fas fa-circle fa-stack-2x dribbble"></i>
-                            <i class="fab fa-dribbble fa-stack-1x"></i>
                         </a>
                     </span>
                 </div> <!-- end of col -->
