--- a/IPLwebsite/index.html
+++ b/IPLwebsite/index.html
@@ -100,7 +100,7 @@
                     </li>
                 </ul>
                 <span class="app-stores">
-                    <a class="btn-navbar" href="#your-link"><i class="fab fa-chrome"></i></a>
+                    <a class="btn-navbar" href="download.html"><i class="fab fa-chrome"></i></a>
                     <a class="btn-navbar" href="#your-link"><i class="fab fa-google-play"></i></a>
                 </span>
             </div>
@@ -118,7 +118,7 @@
                         <div class="text-container">
                             <h2 style="color: white;">Esports Tournament App for <span id="js-rotating">PUBGM Lovers,PUBGM Gamers, PUBGM Pros</span></h2>
                             <p class="p-large">For everyone interested in playing professional Custom PUBG Matches and win Daily Prizes</p>
-                        <a class="btn-solid-lg page-scroll" href="#your-link"><i class="fab fa-chrome"></i>Download Now</a>
+                        <a class="btn-solid-lg page-scroll" href="download.html"><i class="fab fa-chrome"></i>Download Now</a>
        
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
@@ -763,7 +763,7 @@
                     <ul class="list-unstyled v-space-lg">
                         <li class="address"><i class="fas fa-map-marker-alt"></i>Gujarat 360575, India</li>
                         <li><i class="fas fa-phone"></i>+91 7016070995</li>
-                        <li><i class="fas fa-envelope"></i><a class="underline" href="mailto:office@IndianPUBGLeague.com">office@Indian PUBG League.com</a></li>
+                        <li><i class="fas fa-envelope"></i><a class="underline" href="mailto:legendsofpubgm@gmail.com">legendsofpubgm@gmail.com</a></li>
                         <li><i class="fab fa-chrome"></i><a class="underline" href="#your-link">www.IndianPUBGLeague.com</a></li>
                     </ul>
                 </div> <!-- end of col -->
@@ -819,7 +819,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <span class="fa-stack fa-lg">
-                        <a href="#your-link">
+                        <a href="https://www.facebook.com/LegendsOfPUBGM/">
                             <i class="fas fa-circle fa-stack-2x facebook"></i>
                             <i class="fab fa-facebook-f fa-stack-1x"></i>
                         </a>
@@ -831,14 +831,14 @@
                         </a>
                     </span>
                     <span class="fa-stack fa-lg">
-                        <a href="#your-link">
+                        <a href="https://www.youtube.com/channel/UCbpV3tam6MOkryWKqcLu2uw">
                             <i class="fas fa-circle fa-stack-2x youtube"></i>
                             <i class="fab fa-youtube fa-stack-1x"></i>
                         </a>
                     </span>
 
                     <span class="fa-stack fa-lg">
-                        <a href="#your-link">
+                        <a href="https://www.instagram.com/legends.of.pubg/">
                             <i class="fas fa-circle fa-stack-2x instagram"></i>
                             <i class="fab fa-instagram fa-stack-1x"></i>
                         </a>
