--- a/IPLwebsite/download.html
+++ b/IPLwebsite/download.html
@@ -164,15 +164,15 @@
             
                       <div class="col-md-4 col-lg-2 margin-top mt-20">
                         <h3 class="text-white">Download</h3>
-                        <img class="img-fluid" src="images/download_app.jpg" width=200" alt="">
+                        <img class="img-fluid" src="images/download_app.PNG" width=200" alt="">
                         </div>
                         <div class="col-md-4 col-lg-2 margin-top mt-20">
                             <h3 class="text-white">Open</h3>
-                            <img class="img-fluid" src="images/open_app.jpg" width="200" alt="">
+                            <img class="img-fluid" src="images/open_app.PNG" width="200" alt="">
                         </div>  
                         <div class="col-md-4 col-lg-2 margin-top mt-20">
                             <h3 class="text-white">Install</h3>
-                            <img class="img-fluid" src="images/install_app.jpg" width="200" alt="">
+                            <img class="img-fluid" src="images/install_app.PNG" width="200" alt="">
                         </div>
                         <div class="mt-20">
                             <p class="lead head-small">
